--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-sipwise-cleanup-tools (0.2-1) unstable; urgency=low
+ngcp-cleanup-tools (0.2-1) unstable; urgency=low
 
   * Config file support added
   * Cronjob file added for daily invocation
@@ -6,7 +6,7 @@ sipwise-cleanup-tools (0.2-1) unstable; urgency=low
 
  -- Jon Bonilla <jbonilla@sipwise.com>  Tue, 13 Oct 2009 23:46:31 +0200
 
-sipwise-cleanup-tools (0.1) unstable; urgency=low
+ngcp-cleanup-tools (0.1) unstable; urgency=low
 
   * Initial release.
 
