--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ngcp-cleanup-tools (0.2-1) unstable; urgency=low
+ngcp-cleanup-tools (0.2.0) unstable; urgency=low
 
   * Config file support added
   * Cronjob file added for daily invocation
