--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ngcp-cleanup-tools (0.2.1) unstable; urgency=low
+
+  * Use syslog for logging
+  * Release for 2.2
+
+ -- Richard Fuchs <rfuchs@sipwise.com>  Wed, 27 Apr 2011 13:03:06 -0400
+
 ngcp-cleanup-tools (0.2.0) unstable; urgency=low
 
   * Config file support added
