--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+ngcp-cleanup-tools (0.4.0) unstable; urgency=low
+
+  [ rfuchs ]
+  * postinst: add el-primitivo postinst script
+
+  [ mprokop ]
+  * control: Bump Standards-Version to 3.9.3
+
+  [ agranig ]
+  * Add cleanup script for music-on-hold cache files.
+
+  [ apogrebennyk ]
+  * acc-cleanup.pl: fix bug with infinite loop in cleanup
+
+ -- Jon Bonilla <jbonilla@sipwise.com>  Fri, 10 Aug 2012 15:35:17 +0200
+
 ngcp-cleanup-tools (0.3.1) unstable; urgency=low
 
   * Fix the bug with infinite loop in cleanup. 
