--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ngcp-cleanup-tools (0.5.0) unstable; urgency=low
+
+  * First version for 2.7 release.
+
+ -- Andrew Pogrebennyk <apogrebennyk@sipwise.com>  Tue, 11 Dec 2012 10:35:59 +0100
+
 ngcp-cleanup-tools (0.4.0) unstable; urgency=low
 
   [ rfuchs ]
