--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ngcp-cleanup-tools (0.5.1+0~mr3.3) unstable; urgency=low
+ngcp-cleanup-tools (0.6.0.0+0~mr3.3.0.0) unstable; urgency=low
 
   * New release.
 
- -- Sipwise Jenkins Builder <jenkins@sipwise.com>  Sat, 01 Feb 2014 19:37:53 +0100
+ -- Alexander Lutay <alutay@sipwise.com>  Fri, 21 Mar 2014 15:18:03 +0100
 
 ngcp-cleanup-tools (0.5.1) unstable; urgency=low
 
