--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ngcp-cleanup-tools (5.0.0.0+0~mr5.0.0.0) unstable; urgency=medium
+
+  [ Richard Fuchs ]
+  * [cfc4ae1] MT#20499 add cleanup script for old cdr files
+
+ -- Alexander Lutay <alutay@sipwise.com>  Fri, 21 Oct 2016 14:57:39 +0200
+
 ngcp-cleanup-tools (0.18.0.0+0~mr5.0.0.0) unstable; urgency=medium
 
   [ Guillem Jover ]
